4/15/2014 - Updated comments in code. Renamed functions
	- Renamed vec_add to vector_add for consistency.
	- Updated comments to document code properly.
	- added location to simple_sec()
	- Updated code to work with the length of the Vector in the struct

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ stamp-h1
 libkdv.a
 test_kdv_simple
 *.txt
+test_kdv_two
+test_kdv_three
+test_kdv_comp
+test_kdv_comp_two
+test_kdv_comp_three
+test_kdv_scaling
