--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,9 @@ bin_PROGRAMS = \
         test_kdv_scaling \
         test_kdv_comp \
         test_kdv_comp_two \
-        test_kdv_comp_three
+        test_kdv_comp_three \
+        test_kdv_long \
+        test_kdv_parallel_scaling
 
 lib_LIBRARIES = libkdv.a
 libkdv_a_SOURCES = \
@@ -24,7 +26,9 @@ libkdv_a_SOURCES = \
         test_kdv_scaling.c \
         test_kdv_comp.c \
         test_kdv_comp_two.c \
-        test_kdv_comp_three.c 
+        test_kdv_comp_three.c \
+        test_kdv_long.c \
+        test_kdv_parallel_scaling.c
 		
 LDADD = libkdv.a
 
@@ -35,4 +39,6 @@ TESTS = \
         test_kdv_scaling \
         test_kdv_comp \
         test_kdv_comp_two \
-        test_kdv_comp_three
+        test_kdv_comp_three \
+        test_kdv_long \
+        test_kdv_parallel_scaling
