4/21/2014 - Modified Spatial and time print function to produce two column orientated time and spatial files. 4/21/2014 - Modified Spatial and time print function to produce two column orientated time and spatial files. 4/21/2014 - Modified Spatial and time print function to produce two column orientated time and spatial files. 4/21/2014 - Modified Spatial and time print function to produce two column orientated time and spatial files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,8 @@ bin_PROGRAMS = \
         test_kdv_comp_three \
         test_kdv_long \
         test_kdv_parallel_scaling \
-        test_kdv_parallel
+        test_kdv_parallel \
+        convert
 
 lib_LIBRARIES = libkdv.a
 libkdv_a_SOURCES = \
@@ -30,7 +31,8 @@ libkdv_a_SOURCES = \
         test_kdv_comp_three.c \
         test_kdv_long.c \
         test_kdv_parallel_scaling.c \
-        test_kdv_parallel.c
+        test_kdv_parallel.c \
+        convert.c
 		
 LDADD = libkdv.a
 
